--- a/rn25-hoannt/public/manifest.json
+++ b/rn25-hoannt/public/manifest.json
@@ -1,4 +1,4 @@
-{
+ {
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "image.png",
       "type": "image/png",
       "sizes": "192x192"
     },
